--- a/ui.html
+++ b/ui.html
@@ -41,10 +41,10 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oJqkbfwo&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=noVHmMwD'>Jobvite, Inc. Careers - UI Developer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oJqkbfwo&__jvst=Employee+Referral&__jvsd=s2yligwY&__jvsc=Twitter&bid=nmTEmMww'>Jobvite, Inc. Careers - UI Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oJqkbfwo&__jvst=Employee+Referral&__jvsd=s2yligwY&__jvsc=Twitter&bid=nmTEmMww'>Jobvite, Inc. Careers - UI Developer</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -62,7 +62,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24958-Designer-VUI-UX?source=feed'>
+<h5><a href='https://dribbble.com/jobs/24958-Designer-VUI-UX?source=feed'>
       Designer VUI/UX at New York Public Radio - Anywhere - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">New York</span></p>
@@ -76,11 +76,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bookingkit.join.com/jobs/462941-ux-ui-designer-m-f-d'>Job @ bookingkit (Berlin): UX/UI Designer (m/f/d) | JOIN</a></h5> 
+<h5><a href='https://bookingkit.join.com/jobs/462941-ux-ui-designer-m-f-d'>Job @ bookingkit (Berlin): UX/UI Designer (m/f/d) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/OUICAREGROUP/743999698316474-assistant-e-d-agence'>OUI CARE GROUP Assistant(e) d'agence | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/OUICAREGROUP/743999698316474-assistant-e-d-agence'>OUI CARE GROUP Assistant(e) d'agence | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France  France France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -88,7 +88,7 @@
 <p><span class="badge badge-light">France  France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verifiedrecruit.com/job/recruiting-bank-tellers-for-a-leading-bank-nationwide/'>RECRUITING BANK TELLERS FOR A LEADING BANK NATIONWIDE? - Verified Recruit</a></h5> 
+<h5><a href='https://verifiedrecruit.com/job/recruiting-bank-tellers-for-a-leading-bank-nationwide/'>RECRUITING BANK TELLERS FOR A LEADING BANK NATIONWIDE? - Verified Recruit</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -100,7 +100,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crosscast.be/job/ui-designer/?platform=hootsuite&utm_campaign=talent-ui-designer'>UI Designer | CrossCast - Freelance platform</a></h5> 
+<h5><a href='https://crosscast.be/job/ui-designer/?platform=hootsuite&utm_campaign=talent-ui-designer'>UI Designer | CrossCast - Freelance platform</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -205,7 +205,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ongoing.join.com/jobs/463683-web-developer-frontend-ui-ux-80-100-oder-nach-vereinbarung'>Job @ ongoing (Zug): Web-Developer (Frontend / UI ... | JOIN</a></h5> 
+<h5><a href='https://ongoing.join.com/jobs/463683-web-developer-frontend-ui-ux-80-100-oder-nach-vereinbarung'>Job @ ongoing (Zug): Web-Developer (Frontend / UI ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -245,7 +245,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://ssuf.join.com/jobs/459577-ui-ux-designer'>Job @ Swiss Startup Factory (Z?rich): UI/UX Designer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ssuf.join.com/jobs/459577-ui-ux-designer'>Job @ Swiss Startup Factory (Z?rich): UI/UX Designer | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -257,7 +257,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://admind1.recruitee.com/o/uxui-designer-krakow'>
+<h5><a href='https://admind1.recruitee.com/o/uxui-designer-krakow'>
       UX/UI Designer - Admind
     </a></h5> 
 <p><span class="badge badge-light">Krak?w Krak?w</span></p>
@@ -279,7 +279,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://we-recruit.join.com/jobs/459255-recruitment-consultant-headhunter-zurich-take-your-shot'>Job @ WE RECRUIT (Z?rich): Recruitment Consultant/... | JOIN</a></h5> 
+<h5><a href='https://we-recruit.join.com/jobs/459255-recruitment-consultant-headhunter-zurich-take-your-shot'>Job @ WE RECRUIT (Z?rich): Recruitment Consultant/... | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -303,13 +303,13 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/19463-Senior-UI-UX-Designer?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/19463-Senior-UI-UX-Designer?source=twitter'>
       Senior UI/UX Designer at Optimize.Ad - Austin, TX - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o7cQafw3&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=ntnhlMwJ'>ServiceNow Careers - Senior Front End Software Engineer - UI/UX Engineering Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o7cQafw3&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=ntnhlMwJ'>ServiceNow Careers - Senior Front End Software Engineer - UI/UX Engineering Platform</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -317,7 +317,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://www.greatinsurancejobs.com/job/6406771/ui-developer/?TrackID=97736'>UI Developer job with Travelers Insurance | 6406771</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.greatinsurancejobs.com/job/6406771/ui-developer/?TrackID=97736'>UI Developer job with Travelers Insurance | 6406771</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -333,7 +333,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/central-service-tech-i-css-5587'>Central Service Tech I-CSS - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/central-service-tech-i-css-5587'>Central Service Tech I-CSS - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -369,11 +369,11 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5589/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/5589/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5590/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/5590/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -449,7 +449,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999698213734-emploi-etudiant-equipier-temps-partiel-cuisine'>McDonald's Restaurants EMPLOI ?TUDIANT ?quipier temps partiel CUISINE | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999698213734-emploi-etudiant-equipier-temps-partiel-cuisine'>McDonald's Restaurants EMPLOI ?TUDIANT ?quipier temps partiel CUISINE | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
